--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@
     <br></br>
 
     <button id="snap" style="margin-left: 350px">Snap Photo</button>           <!--Take a photo-->
-    <button id="filtering" style="margin-left: 600px">Filter Photo</button>    <!--Photo first filter-->
+    <button id="filtering" style="margin-left: 600px">Filter 1</button>        <!--button filter 1-->
     <br></br>
-    <canvas id="canvas" style="margin-left: 100px"></canvas>                   <!--PHOTO-->
-    <canvas id="canvasFiltered" style="margin-left: 100px"></canvas>           <!--First filter-->
+    <canvas id="canvas" style="margin-left: 100px"></canvas>                   <!--ORIGINAL PHOTO-->
+    <canvas id="canvasFiltered" style="margin-left: 100px"></canvas>           <!--photo 1-->
     <br></br>
-    <button id="filtering2" style="margin-left: 350px">Filter Photo2</button>  <!--Photo second filter-->
-    <button id="filtering3" style="margin-left: 600px">Filter Photo3</button>  <!--Photo third filter-->
+    <button id="filtering2" style="margin-left: 350px">Filter 2</button>       <!--button filter 2-->
+    <button id="filtering3" style="margin-left: 600px">Filter 3</button>       <!--button filter 3-->
     <br></br>
-    <canvas id="filter2" style="margin-left: 100px"></canvas>                  <!--Second filter-->
-    <canvas id="filter3" style="margin-left: 100px"></canvas>                  <!--Third filter-->
+    <canvas id="filter2" style="margin-left: 100px"></canvas>                  <!--photo 2-->
+    <canvas id="filter3" style="margin-left: 100px"></canvas>                  <!--photo 3-->
 
 <script>
 
