--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
 <body>
 
-    <p style="text-align: center">Laboratorinis no. 4</p>
+    <p style="text-align: center">Laboratory work no. 4</p>
 
     <video id="video" autoplay></video>
     <br></br>
@@ -25,6 +25,14 @@
     <br></br>
     <canvas id="canvasFiltered2" style="margin-left: 100px"></canvas>                  <!--photo 2-->
     <canvas id="canvasFiltered3" style="margin-left: 100px"></canvas>                  <!--photo 3-->
+    <br></br>
+    <p style="text-align:center">Conlcusion: </p>
+    <p>
+        <ul style="text-align:center">
+            <li>Used WebRTC to access the camera and then other nuancess to alter the canvases and display the results.</li>
+            <li>Tested on most of the mainstream browsers. Works perfectly with firefox.</li>
+        </ul>
+    </p>
 
 <script>
 
@@ -83,9 +91,6 @@
         canvasF3.style.filter = "brightness(300%)";
     });
 
-
-
-    
 </script>
 
 </body>
